--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
     "watch": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "serve": "node_modules/.bin/http-server ."
   },
   "devDependencies": {
+    "http-server": "^0.11.1",
     "ts-loader": "^3.5.0",
     "typescript": "^2.7.1",
     "webpack": "^3.11.0"
